# robo-dino

./: .gitignore  README.md  index.html
.github/workflows/: deploy.yml
assets/: index-4aXOzqD0.js  index-Aa5FuZnF.js  index-B-O7BxQ7.css  index-B20-AoYw.js  index-BAnChXT7.js  index-BIqd-tfu.js  index-BKL-Ktzn.js  index-BPkymiGV.js  index-BaD5Jvdj.js  index-Bbz8_Ewm.js  index-BdD3UUVl.js  index-CB8q1VSJ.js  index-CYkZiGAK.js  index-ChqDzis3.js  index-Cq8C4Z9s.js  index-Cvbv59Ag.js  index-D6szvqvA.js  index-DN4oH3Y7.js  index-DbiBK97T.js  index-w_F168dN.css  rust_dino_bg-BN0Gd10G.wasm  rust_dino_bg-BWnd4XSc.wasm  rust_dino_bg-BexTcDYH.wasm  rust_dino_bg-BvGdgbYa.wasm  rust_dino_bg-ByiRisMY.wasm  rust_dino_bg-Bzcwd-Gb.wasm  rust_dino_bg-C2az293a.wasm  rust_dino_bg-CA7CdFlL.wasm  rust_dino_bg-C_gMO3WL.wasm  rust_dino_bg-CrVUMnJd.wasm  rust_dino_bg-CxmBgmuj.wasm  rust_dino_bg-D6h-wNSk.wasm  rust_dino_bg-DD38PoVb.wasm  rust_dino_bg-DSkVR17l.wasm  rust_dino_bg-DUPtSR06.wasm  rust_dino_bg-hD2fcvbJ.wasm  rust_dino_bg-vunRcCs6.wasm  rust_dino_bg-ztOCEczI.wasm
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/rust/: package.json  rust_dino.d.ts  rust_dino.js  rust_dino_bg.wasm  rust_dino_bg.wasm.d.ts
frontend/types/: rust-dino.d.ts
rust-dino/: Cargo.toml
rust-dino/src/: lib.rs
