[package]
name = "rust-dino"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
    "cdylib",
] # necessaria per generare libreria di tipo dynamic per WASM

[dependencies]
wasm-bindgen = "0.2.100"
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
web-sys = { version = "0.3", features = ["console"] }
